--- a/Index.html
+++ b/Index.html
@@ -1,118 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
   <meta charset="UTF-8" />
-  <title>Crunchyroll Premium BD</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Crunchyroll Premium BD Shop</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background: #ffffff;
-      color: #000;
+      color: #000000;
     }
     .container {
       max-width: 1200px;
       margin: auto;
-      padding: 10px;
+      padding: 0 15px;
     }
-    .page { display: none; }
-    .active { display: block; }
-    .banner {
+    .page {
+      display: none;
+      padding: 20px;
+      background: #ffffff;
+    }
+    .active {
+      display: block;
+    }
+    img.banner {
       width: 100%;
-      border-radius: 10px;
-      margin-top: 10px;
+      border-radius: 8px;
     }
-    .avatar {
+    img.avatar {
       width: 100px;
       height: 100px;
       border-radius: 50%;
+      border: 3px solid #000;
       display: block;
-      margin: 15px auto;
-      border: 2px solid #000;
+      margin: 20px auto;
     }
-    .btn {
-      padding: 12px 20px;
-      background: #28a745;
-      border: none;
-      border-radius: 8px;
-      color: #fff;
-      font-size: 18px;
-      cursor: pointer;
-      margin: 10px auto;
-      display: block;
-    }
-    .btn:hover {
-      background: #218838;
-    }
-    .package-btn {
-      display: block;
+    input, select, button {
       width: 100%;
-      margin: 8px 0;
       padding: 10px;
+      margin: 8px 0;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+      box-sizing: border-box;
+    }
+    button {
+      cursor: pointer;
+    }
+    .buy-now-btn {
       background: #007bff;
       color: white;
-      font-size: 16px;
+      padding: 12px 20px;
+      font-size: 18px;
       border: none;
-      border-radius: 6px;
-      cursor: pointer;
+      border-radius: 8px;
+      display: block;
+      width: 200px;
+      margin: 20px auto;
+      transition: background-color 0.3s ease;
+    }
+    .buy-now-btn:hover {
+      background: #0056b3;
+    }
+    .package-btn {
+      background: #0f7dc8;
+      color: white;
+      margin-top: 6px;
+      border-radius: 8px;
     }
     .package-btn:hover {
-      background: #0056b3;
+      background: #095e9f;
     }
     .action-btns {
       display: flex;
       justify-content: space-between;
-      margin-top: 20px;
+      margin-top: 16px;
+      gap: 10px;
+    }
+    .orange {
+      background: orange;
+      color: black;
+      flex: 1;
+      border-radius: 8px;
+      padding: 12px 0;
+      font-weight: bold;
+    }
+    .green {
+      background: green;
+      color: white;
+      flex: 1;
+      border-radius: 8px;
+      padding: 12px 0;
+      font-weight: bold;
+    }
+    .error {
+      color: #ff4d4d;
     }
     .copy-box {
-      background: #eee;
+      background: #f2f2f2;
       padding: 10px;
       border-radius: 8px;
       margin-top: 10px;
-    }
-    input, select {
-      width: 100%;
-      padding: 10px;
-      margin: 6px 0;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    .error {
-      color: red;
-      margin-top: 5px;
+      color: black;
     }
   </style>
+
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 </head>
 <body>
 <div class="container">
 
-<!-- Home Page -->
+<!-- Main Page -->
 <div id="mainPage" class="page">
   <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" class="banner" />
   <img src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" class="avatar" />
   <h2 style="text-align:center;">Welcome to Crunchyroll Premium BD Shop</h2>
-  <button class="btn" onclick="navigateTo('packagePage')">BUY NOW</button>
+  <button class="buy-now-btn" onclick="showPage('packagePage')">BUY NOW</button>
+  <p style="margin-top:20px; text-align:center;">
+    <strong>Total Users:</strong> <span id="userCount">0</span> |
+    <strong>Total Orders:</strong> <span id="orderCount">0</span>
+  </p>
 </div>
 
 <!-- Package Page -->
 <div id="packagePage" class="page">
-  <h2>📦 Select Your Package</h2>
-  <h3>Shared Profile</h3>
+  <h2>📦 প্যাকেজ সিলেকশন</h2>
+  <!-- Shared -->
+  <h3>📤 Shared Profile</h3>
   <button class="package-btn" onclick="selectPackage('Shared Profile', '1 Month', 100)">1 Month – 100 TK</button>
   <button class="package-btn" onclick="selectPackage('Shared Profile', '2 Months', 200)">2 Months – 200 TK</button>
-
-  <h3>Personal Profile</h3>
+  <button class="package-btn" onclick="selectPackage('Shared Profile', '3 Months', 300)">3 Months – 300 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile', '6 Months', 600)">6 Months – 600 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile', '8 Months', 840)">8 Months – 840 TK</button>
+  <!-- Personal -->
+  <h3>👤 Personal Profile</h3>
   <button class="package-btn" onclick="selectPackage('Personal Profile', '1 Month', 240)">1 Month – 240 TK</button>
   <button class="package-btn" onclick="selectPackage('Personal Profile', '2 Months', 480)">2 Months – 480 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '3 Months', 720)">3 Months – 720 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '6 Months', 1440)">6 Months – 1440 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '8 Months', 1800)">8 Months – 1800 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '12 Months', 2760)">12 Months – 2760 TK</button>
+  <!-- Primary -->
+  <h3>👑 Primary Account</h3>
+  <button class="package-btn" onclick="selectPackage('Primary Account', '1 Month', 650)">1 Month – 650 TK</button>
+  <button class="package-btn" onclick="selectPackage('Primary Account', '2 Months', 1300)">2 Months – 1300 TK</button>
+  <button class="package-btn" onclick="selectPackage('Primary Account', '3 Months', 1950)">3 Months – 1950 TK</button>
+  <button class="package-btn" onclick="selectPackage('Primary Account', '6 Months', 3600)">6 Months – 3600 TK</button>
 
   <div class="action-btns">
-    <button class="btn" onclick="goToCheckout()">Add to Cart</button>
-    <button class="btn" onclick="navigateTo('mainPage')">Back</button>
+    <button class="orange" onclick="goToCheckout()">🛒 Add To Cart</button>
+    <button class="green" onclick="showPage('mainPage')">⬅️ Back To Home</button>
   </div>
   <p id="pkgError" class="error"></p>
 </div>
@@ -121,128 +163,175 @@
 <div id="checkoutPage" class="page">
   <h2>✅ Checkout</h2>
   <div id="selectedInfo"></div>
-  <input id="coName" type="text" placeholder="Full Name" />
-  <input id="coEmail" type="email" placeholder="Email" />
-  <input id="coAddress" type="text" placeholder="Address" />
-  <input id="coMobile" type="text" placeholder="Mobile Number" />
-  <input id="coPaymentNumber" type="text" placeholder="Payment Number" />
-  <input id="coTransID" type="text" placeholder="Transaction ID" />
-  <select id="paymentMethod" onchange="updatePayNumber()">
-    <option value="">-- Select Payment Method --</option>
-    <option value="Bkash">Bkash</option>
-    <option value="Nagad">Nagad</option>
-    <option value="Rocket">Rocket</option>
-  </select>
-  <div id="payNumber" class="copy-box"></div>
-  <p style="font-size: 14px; color: red;">⚠️ Please send exact amount using "Send Money". No refunds for incorrect amounts.</p>
-  <button class="btn" onclick="confirmOrder()">Confirm Order</button>
-  <button class="btn" onclick="navigateTo('packagePage')">Back</button>
+  <div style="margin-top: 20px">
+    <input id="coName" type="text" placeholder="Full Name" />
+    <input id="coEmail" type="email" placeholder="Email" />
+    <input id="coAddress" type="text" placeholder="Street Address" />
+    <input id="coMobile" type="text" placeholder="Mobile Number" />
+    <input id="coPaymentNumber" type="text" placeholder="Payment Number" />
+    <input id="coTransID" type="text" placeholder="Transaction ID" />
+    <select id="paymentMethod" onchange="updatePayNumber()">
+      <option value="">-- পেমেন্ট মেথড সিলেক্ট করুন --</option>
+      <option value="Bkash">Bkash</option>
+      <option value="Nagad">Nagad</option>
+      <option value="Rocket">Rocket</option>
+    </select>
+    <div id="payNumber" class="copy-box"></div>
+    <p>অবশ্যই সেন্ড মানি করতে হবে এবং নির্দিষ্ট পরিমাণ পাঠাবেন। কম পাঠালে রিফান্ড হবে না।</p>
+    <button class="green" onclick="confirmOrder()">✅ Order Confirm</button>
+    <button class="orange" onclick="showPage('packagePage')">⬅️ Back To Packages</button>
+  </div>
   <p id="coError" class="error"></p>
 </div>
 
 </div>
 
 <script>
-  // Firebase
+  // Firebase configuration
   const firebaseConfig = {
-    apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-    authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-    projectId: "crunchyrollpremiumbd-shop",
+    apiKey: 'AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4',
+    authDomain: 'crunchyrollpremiumbd-shop.firebaseapp.com',
+    projectId: 'crunchyrollpremiumbd-shop',
   };
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 
-  // EmailJS
+  // EmailJS configuration
   const emailjsConfig = {
-    service: "service_z1714kq",
-    adminTpl: "template_hp66tqp",
-    custTpl: "template_1z1lhlf",
-    publicKey: "SsUmUorUm-BZG8LBY",
+    service: 'service_z1714kq',
+    adminTpl: 'template_hp66tqp',
+    custTpl: 'template_1z1lhlf',
+    publicKey: 'SsUmUorUm-BZG8LBY',
   };
   emailjs.init(emailjsConfig.publicKey);
 
-  // Page navigation with session memory
-  function navigateTo(pageId) {
+  // Show page function with localStorage to retain page on refresh
+  function showPage(id) {
     document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-    document.getElementById(pageId).classList.add('active');
-    localStorage.setItem('lastPage', pageId);
+    document.getElementById(id).classList.add('active');
+    // Save current page to localStorage
+    localStorage.setItem('currentPage', id);
   }
-  window.onload = () => {
-    const last = localStorage.getItem('lastPage') || 'mainPage';
-    navigateTo(last);
+
+  // On load, show saved page or default mainPage
+  window.addEventListener('load', () => {
+    const savedPage = localStorage.getItem('currentPage');
+    if (savedPage && document.getElementById(savedPage)) {
+      showPage(savedPage);
+    } else {
+      showPage('mainPage');
+    }
+  });
+
+  // Update user and order counts realtime
+  function startListeners() {
+    db.collection('users').onSnapshot(snap => {
+      document.getElementById('userCount').textContent = snap.size;
+    });
+    db.collection('orders').onSnapshot(snap => {
+      document.getElementById('orderCount').textContent = snap.size;
+    });
   }
+  startListeners();
 
   // Package selection
   let selectedPkg = null;
-  function selectPackage(type, duration, price) {
-    selectedPkg = { type, duration, price };
+  function selectPackage(profile, duration, price) {
+    selectedPkg = { profile, duration, price };
     document.getElementById('pkgError').textContent = '';
-    alert(`✅ Selected: ${type} - ${duration} - ${price} TK`);
+    alert(`✅ '${profile}' (${duration}) – ${price} TK সিলেক্ট হয়েছে`);
   }
 
-  // Payment Number
+  // Show payment number based on payment method
   function updatePayNumber() {
-    const method = document.getElementById('paymentMethod').value;
+    const m = document.getElementById('paymentMethod').value;
     let num = '';
-    if (method === 'Bkash') num = '01740433733';
-    else if (method === 'Nagad' || method === 'Rocket') num = '01603599843';
+    if (m === 'Bkash') num = '01740433733';
+    else if (m === 'Nagad' || m === 'Rocket') num = '01603599843';
+    else num = '';
     document.getElementById('payNumber').innerHTML = num
-      ? `${method} Number: <strong>${num}</strong> <button onclick="navigator.clipboard.writeText('${num}')">📋 Copy</button>`
+      ? `${m} নম্বর: <strong>${num}</strong> <button onclick="copyToClipboard('${num}')">📋 কপি</button>`
       : '';
   }
 
-  // Show checkout
+  function copyToClipboard(text) {
+    navigator.clipboard.writeText(text).then(() => {
+      alert('কপি করা হয়েছে: ' + text);
+    });
+  }
+
+  // Go to checkout page
   function goToCheckout() {
     if (!selectedPkg) {
-      document.getElementById('pkgError').textContent = '⚠️ Please select a package';
+      document.getElementById('pkgError').textContent = '⚠️ প্যাকেজ সিলেক্ট করুন';
       return;
     }
     document.getElementById('selectedInfo').innerHTML = `
-      <p>📦 Package: <strong>${selectedPkg.type}</strong></p>
-      <p>🕒 Duration: <strong>${selectedPkg.duration}</strong></p>
-      <p>💰 Price: <strong>${selectedPkg.price} TK</strong></p>
+      <p>📦 আপনি নিয়েছেন: <strong>${selectedPkg.profile}</strong></p>
+      <p>🕒 মেয়াদ: <strong>${selectedPkg.duration}</strong></p>
+      <p>💰 মূল্য: <strong>${selectedPkg.price} TK</strong></p>
     `;
-    navigateTo('checkoutPage');
+    showPage('checkoutPage');
   }
 
-  // Confirm Order
+  // Confirm order and save to Firestore + send emails via EmailJS
   async function confirmOrder() {
     const name = document.getElementById('coName').value.trim();
     const email = document.getElementById('coEmail').value.trim();
-    const address = document.getElementById('coAddress').value.trim();
+    const addr = document.getElementById('coAddress').value.trim();
     const mobile = document.getElementById('coMobile').value.trim();
     const payNo = document.getElementById('coPaymentNumber').value.trim();
-    const transId = document.getElementById('coTransID').value.trim();
-    const method = document.getElementById('paymentMethod').value;
+    const trans = document.getElementById('coTransID').value.trim();
+    const pm = document.getElementById('paymentMethod').value;
     const coErr = document.getElementById('coError');
     coErr.textContent = '';
 
-    if (!name || !email || !address || !mobile || !payNo || !transId || !method) {
-      coErr.textContent = '⚠️ Please fill all fields';
+    if (!name || !email || !addr || !mobile || !payNo || !trans || !pm) {
+      coErr.textContent = '⚠️ সব তথ্য ভরুন';
       return;
     }
 
-    const data = {
-      ...selectedPkg,
-      name,
-      email,
-      address,
-      mobile,
-      payNo,
-      transId,
-      method,
-      timestamp: firebase.firestore.FieldValue.serverTimestamp()
-    };
-
     try {
+      const data = {
+        ...selectedPkg,
+        name,
+        email,
+        addr,
+        mobile,
+        payNo,
+        trans,
+        pm,
+        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+      };
       await db.collection('orders').add(data);
-      emailjs.send(emailjsConfig.service, emailjsConfig.adminTpl, data);
+
+      // Send emails
       emailjs.send(emailjsConfig.service, emailjsConfig.custTpl, data);
-      alert('✅ Order placed successfully. Confirmation sent via Email.');
-      navigateTo('mainPage');
+      emailjs.send(emailjsConfig.service, emailjsConfig.adminTpl, data);
+
+      alert('✅ অর্ডার সফল হয়েছে। কাস্টমার ও অ্যাডমিনে ইমেইল পাঠানো হয়েছে।');
+
+      // Clear selected package & inputs
+      selectedPkg = null;
+      clearCheckoutForm();
+
+      showPage('mainPage');
     } catch (err) {
-      coErr.textContent = '❌ Failed to submit order: ' + err.message;
+      alert('❌ অর্ডার ব্যর্থ: ' + err.message);
     }
+  }
+
+  // Clear checkout inputs
+  function clearCheckoutForm() {
+    document.getElementById('coName').value = '';
+    document.getElementById('coEmail').value = '';
+    document.getElementById('coAddress').value = '';
+    document.getElementById('coMobile').value = '';
+    document.getElementById('coPaymentNumber').value = '';
+    document.getElementById('coTransID').value = '';
+    document.getElementById('paymentMethod').value = '';
+    document.getElementById('payNumber').innerHTML = '';
+    document.getElementById('coError').textContent = '';
   }
 </script>
 </body>
